1.2.0 [2013-03-24]
 - Allow to use CMake instead of distutils/pkg-config
1.1.0 [2013-01-07]
 - Converting python2 syntax to python3 (run 2to3)
 - Patch to make instant work with python2
 - Cache dir is now created if not existing
1.0.0 [2011-12-07]
 - Copy all files to ~/.instant/error/module_name when Instant fails
 - If environmental variable INSTANT_DISPLAY_COMPILE_LOG is set the content
   of compile.log will be displayed
 - Removed copying of compile.log to ~/.instant/error/
1.0-beta2 [2011-10-28]
 - Added support for flufl.lock for NFS safe file locking
1.0-beta [2011-08-11]
 - Error log is now copied to ~/.instant/error/module_name/compile.log
   and ~/.instant/error/compile.log for easier retrieval
0.9.10 [2011-05-16]
 - Added support for setting swig binary and swig path
0.9.9 [2011-02-23]
 - Optimizations
 - Added support for VTK and VMTK
0.9.8 [2010-02-15]
 - Fix cache related memory leak
0.9.7
 - Use typemaps from the NumPy SWIG interface file (numpy.i)
   enabling the use of many new data types.
 - Removed support for Numeric and numarray.
0.9.6
 - Minor update with some new utility functions required by FFC.
0.9.5
 - Restructured and rewritten much of the code.
 - Improved multilevel cache functionality.
 - Added instant-clean and instant-showcache scripts.
0.9.4
 - Various new examples with swiginac and sympy implemented.
 - Bug fix on 64bit. Removed director flag by default.
0.9.3
 - Implemented caching
0.9.2
 - Bug fix for the JIT in FFC
0.9.1
 - Added test example which demonstrate use of external C code.
 - Added flag to turn of regeneration of the interface file
   (useful during debugging)
0.9
 - Port to Windows with mingw by laserjungle, some updates
   by Martin Alnæs, and some cleanup.
0.8
 - Added support for NumPy and Numarray.
0.7
 - Added functionality for the use of pkg-config files.
0.6
 - Created a more user-friendly interface
0.5
 - Added SWIG directors for cross language inheritance
0.4